<resources>
    <string name="app_name">EnDOtec Castolin</string>
    <string name="action_settings">Settings</string>
    <string name="intro">START</string>
    <string name="readme">Read me</string>
    <string name="backButton">back</string>
    <string name="action_advantages">Advantages:</string>
    <string name="action_part">Part:</string>
    <string name="action_wear">Wear:</string>
    <string name="action_technical_support">Request Additional Info</string>
    <string name="selections_title">Choose a phenomenon:</string>
    <string name="NameOfCustomer">Your full name here:</string>
    <string name="Country">Country:</string>
    <string name="Company">Company:</string>
    <string name="Email">Email:</string>
    <string name="PhoneNumber">Telephone:</string>
    <string name="Description">Description:</string>
    <string name="SendFeedback">Send</string>
    <string name="AllFieldsCompulsory">All the fields are compulsory.\n</string>
    <string name="EmailClient">Choose an Email client :</string>
    <string name="EmailTechnicalSupport">Technical support request from EnDOtec EASYselector App</string>
    <string name="read_me_description">\nIt is usual that an observed worn part involves the combination of several individual wear mechanisms. Simple solutions become insuficient and the practical solution lies with experience a broad product range and partnership.\n\n
THIS IS A TRUE CASTOLIN EUTECTIC COMPETENCE\n\n
This makes the wear mechanism considerably more complex and difficult to understand. Sometimes 2, 3 or even 4 different wear mechanisms can be operating, which render the simple solutions insufficient. However, the primary wear mechanism must be established.\n\n
How to use this app:\n
1. Analyse and identify the primary wear factor involved.\n
2. Analyse and identify the secondary and tertiary wear factors.\n
3. Use this guide to have a first selection of the Endotec wires oriented to your application requirements.\n\n
If needed consult your technical department for confirmation and further help in welding procedure.</string>
    <string name="Selectionlist1">Abrasion/Impact/Heat</string>
    <string name="Selectionlist2">Abrasion/Impact/Corrosion</string>
    <string name="Selectionlist3">Abrasion/Heat/Corrosion</string>
    <string name="Selectionlist4">Heat/Impact/Corrosion</string>
    <string name="Selectionlist5">Erosion</string>
    <string name="Selectionlist6">Mechanical Fatigue (Cavitation)</string>
    <string name="Selectionlist7">Cavitation</string>
    <string name="Selectionlist8">Friction and Rubbing</string>
    <string name="AIH1">Abrasion</string>
    <string name="AIH2">Impact</string>
    <string name="AIH3">Heat</string>
    <string name="AIH4">ABRASION + Impact</string>
    <string name="AIH5">IMPACT + Abrasion</string>
    <string name="AIH6">Abrasion + Heat</string>
    <string name="AIH7">Impact + Heat</string>
    <string name="AIH8">Abrasion + Impact + Heat</string>
    <string name="AIC1">Abrasion</string>
    <string name="AIC2">Impact</string>
    <string name="AIC3">Corrosion</string>
    <string name="AIC4">ABRASION + Impact</string>
    <string name="AIC5">IMPACT + Abrasion</string>
    <string name="AIC6">Abrasion + Corrosion</string>
    <string name="AIC7">Impact + Corrosion</string>
    <string name="AIC8">Abrasion + Impact + Corrosion</string>
    <string name="AHC1">Abrasion</string>
    <string name="AHC2">Heat</string>
    <string name="AHC3">Corrosion</string>
    <string name="AHC4">Abrasion + Heat</string>
    <string name="AHC5">Abrasion + Corrosion</string>
    <string name="AHC6">Heat + Corrosion</string>
    <string name="AHC7">Abrasion + Heat + Corrosion</string>
    <string name="HIC1">Heat</string>
    <string name="HIC2">Impact</string>
    <string name="HIC3">Corrosion</string>
    <string name="HIC4">Heat + Impact</string>
    <string name="HIC5">Heat + Corrosion</string>
    <string name="HIC6">Impact + Corrosion</string>
    <string name="HIC7">Heat + Impact + Corrosion</string>
    <string name="erosion1">1. DO*390N</string>
    <string name="erosion2">2. 8336EG</string>
    <string name="erosion3">3. DO*48</string>
    <string name="erosion4">4. DO*11</string>
    <string name="erosion5">5. DO*33</string>
    <string name="erosion6">6. DO*322</string>
    <string name="application1">Part:</string>
    <string name="application2">Wear:</string>
    <string name="application3">Typical Solutions:</string>
    <string name="application4">Advanced Solutions:</string>
    <string name="application5">Advantages:</string>
    <string name="mechanical1">1. DO*22</string>
    <string name="mechanical2">2. DO*02</string>
    <string name="mechanical3">3. DO*257</string>
    <string name="cavitation1">1. CAVITEC</string>
    <string name="cavitation2">2. DO*80</string>
    <string name="cavitation3">3. DO*04</string>
    <string name="cavitation4">4. DO*05</string>
    <string name="cavitation5">5. DO*02</string>
    <string name="frictionrubbing1">1. DO*80</string>
    <string name="frictionrubbing2">2. DO*70</string>
    <string name="frictionrubbing3">3. DO*60</string>
    <string name="frictionrubbing4">4. DO*329</string>
    <string name="frictionrubbing5">5. DO*06</string>
    <string name="frictionrubbing6">6. DO*360X</string>
    <string name="frictionrubbing7">7. DO*04</string>
    <string name="aihabrasion1">1. DO*48</string>
    <string name="aihabrasion2">2. DO*390N</string>
    <string name="aihabrasion3">3. 8336EG</string>
    <string name="aihabrasion4">4. DO*11</string>
    <string name="aihabrasion5">5. DO*33</string>
    <string name="aihabrasion6">6. DO*30</string>
    <string name="aihabrasion7">7. DO*322</string>
    <string name="aihabrasion8">8. DO*31</string>
    <string name="aihabrasion9">9. DO*06</string>
    <string name="aihabrasion10">10. DO*360X</string>
    <string name="aihabrasion11">11. DO*15</string>
    <string name="aihabrasion12">12. DO*13</string>
    <string name="aihimpact1">1. DO*05</string>
    <string name="aihimpact2">2. DO*02</string>
    <string name="aihimpact3">3. DO*310</string>
    <string name="aihimpact4">4. DO*327</string>
    <string name="aihimpact5">5. DO*15</string>
    <string name="aihimpact6">6. DO*351</string>
    <string name="aihimpact7">7. DO*13</string>
    <string name="aihimpact8">8. DO*332</string>
    <string name="aihheat1">1. DO*84</string>
    <string name="aihheat2">2. DO*80</string>
    <string name="aihheat3">3. DO*04</string>
    <string name="aihheat4">4. DO*360X</string>
    <string name="aihheat5">5. DO*70</string>
    <string name="aihheat6">6. DO*60</string>
    <string name="aihheat7">7. DO*22</string>
    <string name="aihabrasionimpact1">1. 8336EG</string>
    <string name="aihabrasionimpact2">2. DO*48</string>
    <string name="aihabrasionimpact3">3. DO*390N</string>
    <string name="aihabrasionimpact4">4. DO*327</string>
    <string name="aihabrasionimpact5">5. DO*31</string>
    <string name="aihabrasionimpact6">6. DO*332</string>
    <string name="aihabrasionimpact7">7. DO*06</string>
    <string name="aihabrasionimpact8">8. DO*15</string>
    <string name="aihabrasionimpact9">9. DO*351</string>
    <string name="aihabrasionimpact10">10. DO*04</string>
    <string name="aihabrasionimpact11">11. DO*329</string>
    <string name="aihimpactabrasion1">1. DO*327</string>
    <string name="aihimpactabrasion2">2. DO*360X</string>
    <string name="aihimpactabrasion3">3. DO*11</string>
    <string name="aihimpactabrasion4">4. DO*329</string>
    <string name="aihimpactabrasion5">5. DO*15</string>
    <string name="aihimpactabrasion6">6. DO*13</string>
    <string name="aihimpactabrasion7">7. DO*351</string>
    <string name="aihimpactabrasion8">8. DO*06</string>
    <string name="aihimpactabrasion9">9. DO*332</string>
    <string name="aihimpactabrasion10">10. DO*05</string>
    <string name="aihimpactabrasion11">11. DO*02</string>
    <string name="aihabrasionheat1">1. DO*390N</string>
    <string name="aihabrasionheat2">2. 8336EG</string>
    <string name="aihabrasionheat3">3. DO*33</string>
    <string name="aihabrasionheat4">4. DO*332</string>
    <string name="aihabrasionheat5">5. DO*06</string>
    <string name="aihabrasionheat6">6. DO*360X</string>
    <string name="aihabrasionheat7">7. DO*15</string>
    <string name="aihabrasionheat8">8. DO*04</string>
    <string name="aihimpactheat1">1. DO*360X</string>
    <string name="aihimpactheat2">2. DO*329</string>
    <string name="aihimpactheat3">3. DO*04</string>
    <string name="aihimpactheat4">4. DO*60</string>
    <string name="aihimpactheat5">5. DO*327</string>
    <string name="aihimpactheat6">6. DO*15</string>
    <string name="aihabrasionimpactheat1">1. DO*360X</string>
    <string name="aihabrasionimpactheat2">2. DO*04</string>
    <string name="aihabrasionimpactheat3">3. DO*60</string>
    <string name="aihabrasionimpactheat4">4. DO*327</string>
    <string name="aihabrasionimpactheat5">5. DO*06</string>
    <string name="aihabrasionimpactheat6">6. DO*329</string>
    <string name="aihabrasionimpactheat7">7. DO*332</string>
    <string name="aihabrasionimpactheat8">8. DO*15</string>
    <string name="aihabrasionimpactheat9">9. 8336EG</string>
    <string name="aihabrasionimpactheat10">10. DO*390N</string>
    <string name="aiccorrosion1">1. DO*22</string>
    <string name="aiccorrosion2">2. DO*80</string>
    <string name="aiccorrosion3">3. DO*60</string>
    <string name="aiccorrosion4">4. DO*70</string>
    <string name="aiccorrosion5">5. DO*02</string>
    <string name="aiccorrosion6">6. CAVITEC</string>
    <string name="aiccorrosion7">7. DO*04</string>
    <string name="aicabrasioncorrosion1">1. DO*411</string>
    <string name="aicabrasioncorrosion2">2. DO*11</string>
    <string name="aicabrasioncorrosion3">3. DO*33</string>
    <string name="aicabrasioncorrosion4">4. DO*390N</string>
    <string name="aicabrasioncorrosion5">5. 8336EG</string>
    <string name="aicabrasioncorrosion6">6. DO*31</string>
    <string name="aicabrasioncorrosion7">7. DO*332</string>
    <string name="aicabrasioncorrosion8">8. DO*70</string>
    <string name="aicabrasioncorrosion9">9. DO*04</string>
    <string name="aicimpactcorrosion1">1. CAVITEC</string>
    <string name="aicimpactcorrosion2">2. DO*02</string>
    <string name="aicimpactcorrosion3">3. DO*05</string>
    <string name="aicimpactcorrosion4">4. DO*04</string>
    <string name="aicabrasionimpactcorrosion1">1. DO*11</string>
    <string name="aicabrasionimpactcorrosion2">2. 8336EG</string>
    <string name="aicabrasionimpactcorrosion3">3. DO*390N</string>
    <string name="aicabrasionimpactcorrosion4">4. DO*31</string>
    <string name="aicabrasionimpactcorrosion5">5. DO*360X</string>
    <string name="aicabrasionimpactcorrosion6">6. DO*60</string>
    <string name="aicabrasionimpactcorrosion7">7. DO*04</string>
    <string name="ahcheatcorrosion1">1. DO*84</string>
    <string name="ahcheatcorrosion2">2. DO*80</string>
    <string name="ahcheatcorrosion3">3. DO*04</string>
    <string name="ahcheatcorrosion4">4. DO*360X</string>
    <string name="ahcheatcorrosion5">5. DO*22</string>
    <string name="ahcheatcorrosion6">6. DO*411</string>
    <string name="ahcabrasionheatcorrosion1">1. DO*33</string>
    <string name="ahcabrasionheatcorrosion2">2. DO*390N</string>
    <string name="ahcabrasionheatcorrosion3">3. 8336EG</string>
    <string name="ahcabrasionheatcorrosion4">4. DO*70</string>
    <string name="ahcabrasionheatcorrosion5">5. DO*04</string>
    <string name="ahcabrasionheatcorrosion6">6. DO*360X</string>
    <string name="hicheatimpactcorrosion1">1. DO*360X</string>
    <string name="hicheatimpactcorrosion2">2. DO*04</string>
    <string name="hicheatimpactcorrosion3">3. DO*80</string>
    <string name="hicheatimpactcorrosion4">4. DO*332</string>
    <string name="hicheatimpactcorrosion5">5. 8336EG</string>
</resources>